[ISSUE# 9382] Use fastjson2 in common module